manifesto/location.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: location
spec:
  replicas: 2
  minReadySeconds: 5
  selector:
    matchLabels:
      app: location
  template:
    metadata:
      labels:
        app: location
    spec:
      tolerations:
        - effect: NoSchedule
          key: dedicated
          operator: Equal
          value: app
      serviceAccount: location
      terminationGracePeriodSeconds: 60
      readinessGates:
        - conditionType: target-health.alb.ingress.k8s.aws/ingress_location_80
      containers:
      - name: webapp
        image: 790946953677.dkr.ecr.us-east-1.amazonaws.com/location:latest
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          periodSeconds: 1
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 20"]
        command:
          - ./app
          - -region
          - us-east-1
          - -tokenEndpoint
          - http://token.dev.svc.cluster.local
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: location
  namespace: dev
spec:
  selector:
    app: location
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
