manifesto/stress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: stress
spec:
  minReadySeconds: 5
  replicas: 2
  selector:
    matchLabels:
      app: stress
  template:
    metadata:
      labels:
        app: stress
    spec:
      tolerations:
        - effect: NoSchedule
          key: dedicated
          operator: Equal
          value: app
      readinessGates:
        - conditionType: target-health.alb.ingress.k8s.aws/ingress_stress_80
      containers:
      - name: webapp
        image: 790946953677.dkr.ecr.us-east-1.amazonaws.com/stress:latest
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 20"]
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: stress
  namespace: dev
spec:
  selector:
    app: stress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
