manifesto/token.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: token
spec:
  minReadySeconds: 5
  replicas: 2
  tolerations:
    - effect: NoSchedule
      key: dedicated
      operator: Equal
      value: app
  selector:
    matchLabels:
      app: token
  template:
    metadata:
      labels:
        app: token
    spec:
      containers:
      - name: webapp
        image: 790946953677.dkr.ecr.us-east-1.amazonaws.com/token:latest
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          periodSeconds: 1
        command:
          - ./app
          - -redisEndpoint
          - clustercfg.us-unicorn-redis-cluster.tkeulv.use1.cache.amazonaws.com:6379
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: token
  namespace: dev
spec:
  selector:
    app: token
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
